01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
  namespace: demo
spec:
  containers:
  - name: apache
    image: httpd:2.4.46-alpine
