02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo
  namespace: demo
  labels:
    app: demo-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-01
  template:
    metadata:
      labels:
        app: demo-01
    spec:
      containers:
      - image: httpd:2.4.46-alpine
        name: apache
        ports:
        - containerPort: 8113
          name: web-port
          protocol: TCP
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
        volumeMounts:
          - mountPath: "/code/pdf_signing"
            name: pvc-volume-01
          - mountPath: "/code/xml_file"
            name: pvc-volume-02
        nodeSelector:
          nodetype: infra-node
      volumes:
        - name: pvc-volume-01
          persistentVolumeClaim:
            claimName: pvc-01
        - name: pvc-volume-02
          persistentVolumeClaim:
            claimName: pvc-02
