04-deployment-web-a-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-web-a-demo
  namespace: demo
  labels:
    app: web-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-a
  template:
    metadata:
      labels:
        app: web-a
    spec:
      containers:
      - image: httpd
        name: apache
