05-deployment-web-b-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-web-b-demo
  namespace: demo
  labels:
    app: web-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-b
  template:
    metadata:
      labels:
        app: web-b
    spec:
      containers:
      - image: nginx
        name: nginx
