03-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: demo-01
