03-service-grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-grafana-demo
  namespace: demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: demo-grafana
