03-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo
  namespace: demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: demo-01
