03-service-nodeport-fixport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo
  namespace: demo
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 32666
  selector:
    app: demo-01
