04-service-web-a-01.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-web-a
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web-a
