05-service-web-b-01.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-web-b
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web-b
