04-ingress-beta.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-beta-version
  namespace: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - backend:
          serviceName: service-demo
          servicePort: 80
