04-ingress-tls-beta.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-beta-version
  namespace: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - backend:
          serviceName: service-demo
          servicePort: 80



apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    secretName:
  rules:
  - host: karbon-kubernetes-dashboard.app19.kubeworkshop.inet.co.th
    http:
      paths:
      - backend:
         serviceName: kubernetes-dashboard
         servicePort: 443
