04-ingress-web-a-01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-aaa-ing
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: aaa.com
    http:
      paths:
      - backend:
          serviceName: service-web-a
          servicePort: 80
