05-ingress-web-b-01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-bbb-ing
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: bbb.net
    http:
      paths:
      - backend:
          serviceName: service-web-b
          servicePort: 80
