istio-ingress-template-01.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: name-of-gateway
  namespace: name-of-namespace
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "http-istio.milky.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: name-of-vservice
  namespace: name-of-namespace
spec:
  hosts:
  - "http-istio.milky.com"
  gateways:
  - name-of-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: service-name-from-kubectl-get-svc
